[package]
name = "sanguine"
version = "0.3.1"
edition = "2021"
authors = ["Will Hopkins <willothyh@gmail.com>"]
description = "A library for creating dynamic TUI experiences in Rust"
repository = "https://github.com/willothy/sanguine"
license = "MIT"
readme = "README.md"
keywords = ["tui", "terminal", "user-interface"]
categories = ["gui", "command-line-interface"]

[features]
default = []
tui = ["dep:ratatui"]
ansi = ["tui", "dep:ansi-to-tui"]

[dependencies]
slotmap = "1.0.6"
termwiz = "0.20.0"
thiserror = "1.0.40"
ratatui = { version = "0.20", optional = true }
ansi-to-tui = { version = "3.0.0", optional = true }
