[package]
name = "sanguine"
version = "0.3.1"
edition = "2021"
authors = ["Will Hopkins <willothyh@gmail.com>"]
description = "A library for creating dynamic TUI experiences in Rust"
repository = "https://github.com/willothy/sanguine"
license = "MIT"
readme = "README.md"
keywords = ["tui", "terminal", "user-interface"]
categories = ["gui", "command-line-interface"]

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
crop = "0.4.0"
dashmap = "5.5.3"
lazy_static = "1.4.0"
slotmap = "1.0.6"
taffy = "0.3.17"
termwiz = "0.20.0"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full", "signal"] }
